// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`populateTree util should match anyof-oneof-schema.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "metadata": Object {
            "properties": Array [
              Object {
                "type": "string",
              },
              Object {
                "properties": Object {
                  "a": Object {
                    "type": "number",
                  },
                  "b": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            ],
          },
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                  ],
                  "id": "random-id",
                  "metadata": Object {
                    "properties": Array [
                      Object {
                        "type": "number",
                      },
                      Object {
                        "items": Object {
                          "oneOf": Array [
                            Object {
                              "type": "string",
                            },
                            Object {
                              "type": "number",
                            },
                          ],
                        },
                        "type": "array",
                      },
                    ],
                  },
                  "name": "",
                  "parent": [Circular],
                },
              ],
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "metadata": Object {
            "properties": Array [
              Object {
                "items": Object {
                  "oneOf": Array [
                    Object {
                      "type": "number",
                    },
                    Object {
                      "items": Object {
                        "oneOf": Array [
                          Object {
                            "type": "string",
                          },
                          Object {
                            "type": "number",
                          },
                        ],
                      },
                      "type": "array",
                    },
                  ],
                },
                "type": "array",
              },
              Object {
                "type": "string",
              },
            ],
          },
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match array-of-allofs.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match array-of-objects.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match array-of-refs.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match combiner-schema.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match default-schema.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
              ],
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match nullish-ref.schema.json 1`] = `
Object {
  "children": Array [
    Object {
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match ref/original.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match tickets.schema.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
        Object {
          "children": Array [
            Object {
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
            Object {
              "children": Array [
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "children": Array [
                    Object {
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                    Object {
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                    Object {
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                    Object {
                      "children": Array [
                        Object {
                          "id": "random-id",
                          "name": "",
                          "parent": [Circular],
                        },
                        Object {
                          "id": "random-id",
                          "name": "",
                          "parent": [Circular],
                        },
                        Object {
                          "id": "random-id",
                          "name": "",
                          "parent": [Circular],
                        },
                        Object {
                          "children": Array [],
                          "id": "random-id",
                          "name": "",
                          "parent": [Circular],
                        },
                        Object {
                          "id": "random-id",
                          "name": "",
                          "parent": [Circular],
                        },
                      ],
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                  ],
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
              ],
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;

exports[`populateTree util should match todo-allof.schema.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
              ],
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
            Object {
              "children": Array [
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
                Object {
                  "children": Array [
                    Object {
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                    Object {
                      "id": "random-id",
                      "name": "",
                      "parent": [Circular],
                    },
                  ],
                  "id": "random-id",
                  "name": "",
                  "parent": [Circular],
                },
              ],
              "id": "random-id",
              "name": "",
              "parent": [Circular],
            },
          ],
          "id": "random-id",
          "name": "",
          "parent": [Circular],
        },
      ],
      "id": "random-id",
      "name": "",
      "parent": [Circular],
    },
  ],
  "id": "random-id",
  "name": "",
  "parent": null,
}
`;
